Fixed the text alignment on about page

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
   font-weight: 400;
   font-size: 18px;
   margin: 10px 0 0 0;
+  text-align: justify;
 }
 .side-image {
   width: 500px;
